src/test/ui/reserved/reserved-become.rs
fn main() {
    let become = 0;
    //~^ ERROR expected identifier, found reserved keyword `become`
}
